tests/machine/x/ocaml/while_loop.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/while_loop.ml", line 6, characters 6-19:
6 |       print_endline !i
          ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 6):
   4 |   let rec loop () =
   5 |     if (!i < 3) then (
   6 |       print_endline !i
   7 |       i := (!i + 1)
   8 |       loop ()
